# loofi-fedora-tweaks

./: ## Chat Customization Diagnostics.md  .copilot-setup-summary.md  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  2026-02-17-020850-command-messagesuperpowersexecuting-planscomm.txt  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT-CHECKLIST.md  ISSUE-27-RESOLUTION.md  Justfile  LICENSE  Loofi Fedora Tweaks.code-workspace  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_SUMMARY.md  README.md  RELEASE-ANNOUNCEMENT.md  RELEASE-NOTES-v23.0.0.md  RELEASE-NOTES-v24.0.0.md  RELEASE-NOTES-v25.0.0.md  RELEASE-NOTES-v25.0.2.md  RELEASE_NOTES.md  ROADMAP.md  SCREENSHOT_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SECURITY_AUDIT_FIXES.md  SUMMARY_V23_TESTS.md  V26_PHASE1_T4_SUMMARY.md  V26_PHASE3_SUMMARY.md  V26_PHASE4_SUMMARY.md  V33.1-IMPLEMENTATION-SUMMARY.md  V33.1-MERGE-FLOW.txt  V33.1-PR-MERGE-README.md  build_flatpak.sh  build_rpm.sh  (+26 more)
.claude/: CLAUDE.md  settings.json
.clinerules/: cline-rules.md  context-minimization.md
.codex/: adapter-manifest.json  config.toml
.copilot/: mcp-config.json
.github/: ## Chat Customization Diagnostics.md  TEST_REPORT_V23.md  copilot-instructions.md  copilot.md  dependabot.yml  labeler.yml  plan.md
completions/: loofi-fedora-tweaks.bash  loofi-fedora-tweaks.zsh
docs/: ADVANCED_ADMIN_GUIDE.md  BEGINNER_QUICK_GUIDE.md  CONTRIBUTING.md  MCP_GITHUB_QUICK_GUIDE.md  PERFORMANCE_ANALYSIS.md  PLUGIN_SDK.md  README.md  RELEASE_CHECKLIST.md  ROADMAP_V15.md  ROADMAP_V16.md  ROADMAP_V18.md  SCREENSHOT_CONTENT_GUIDE.md  SCREENSHOT_UPDATE_GUIDE.md  STRATEGIC_PLAN_V10.md  TROUBLESHOOTING.md  USER_GUIDE.md  codex-icon-pack-prompt.md  mcp-setup.md  release_notes.md
examples/: agent_demo.py  plugin_v26_examples.py  test_t4_validation.py
loofi-fedora-tweaks/: main.py  version.py
plan/: feature-ux-experience-improvement-1.md  refactor-tab-category-reorganization-1.md
repo/: loofi-fedora-tweaks-2.0.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-3.0.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-4.0.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-4.0.1-1.fc43.noarch.rpm  loofi-fedora-tweaks-4.1.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-4.2.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-4.3.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-4.4.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-4.5.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-4.6.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-4.7.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-5.0.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-5.1.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-5.2.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-5.5.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-6.0.0-1.fc43.noarch.rpm  loofi-fedora-tweaks-6.1.0-1.fc43.noarch.rpm  summary  summary.idx
scripts/: _debug_ast.py  _show_untimed.py  add_timeouts.py  add_timeouts_ast.py  autoprove.sh  build_appimage.sh  build_flatpak.sh  build_rpm.sh  build_sdist.sh  build_srpm.sh  bump_version.py  capture_screenshots.py  check_fedora_review.py  (+17 more)
(+886 files in other folders)
